--- a/studying/learningWeb/02 通过Go构建服务器.md
+++ b/studying/learningWeb/02 通过Go构建服务器.md
@@ -29,7 +29,7 @@ func sayHello(w http.ResponseWriter, r *http.Request) {
 func main(){
 		http.HandleFunc("/", sayHello)   //设定访问的路由
 		err := http.ListenAndServe(":8080", nil) //设定监听的端口
-		if err := nil {
+		if err != nil {
 				log.Fatal("ListenAndServe: ", err)//Fatal等价于{Print(v...); os.Exit(1)}打印同时退出程序
 		}
 }
