--- a/studying/learningWeb/03. 接受和处理请求.md
+++ b/studying/learningWeb/03. 接受和处理请求.md
@@ -61,10 +61,28 @@ import (
 		"strings"
 )
 
-func login(w http.ResponseWriter, r http.Request) {
+func login(w http.ResponseWriter, r *http.Request) {
 		fmt.println("method: ", r.Method) //获得请求方法
 		if r.Method == "GET" {
-				t, _ := template.ParseFiles("html.tpl")
+				t, err := template.ParseFiles("html.tpl")
+				if err != nil {
+						log.Fatal("ParseFiles err:",err)
+				}
+				err := t.Execute(w, nil)
+				if err != nil {
+						log.Fatal("Execute err:",err)
+				}
+				log.Println(t.Execute(w, nil))
+		}else {
+				//如果请求的是登录数据
+				_ = r.ParseForm()
+				fmt.Println("username: ", r.Forn["username"])
+				fmt.Println("password: ", r.Form["password"])
+				if pwd := r.Form.Get("password"); pwd == "123456" {
+						fmt.Fprintf(w, "欢迎登录，%s!", r.Form.Get("username"))
+				}else {
+						fmt.Fprintf(w, "密码错误")
+				}
 		}
 }
 
@@ -84,6 +102,59 @@ func main(){
 		http.HandleFunc("/", sayHello)
 		http.HandleFunc("/login", login)
 		err := http.ListenAndServe(":8080", nil)
+		if err != nil {
+				log.Fatal("ListenAndServe: ", err)
+		}
+}
+```
+
+# 4. 返回响应体
+
+通过以上学习可知，通过`ResponseWriter`接口可以返回`HTTP`相应
+
+`ResponseWriter`包含以下方法：
+
+```go
+type ResponseWriter interface {
+		Header() Header
+		Write([]byte) (int, error)
+		WriterHeader(statusCode int)
+}
+```
+
+1. `Header`方法可以取得一个由首部组成的映射，修改这个映射可以修改首部，修改后的首部将被包含在HTTP响应里面，并随着响应一桶发送给客户端
+2. `Write` 方法可以接收一个字节数组作为参数，并将字节数组写入`HTTP`响应的主体中，如果在使用`Write`方法执行写入操作时，没有为首部设置相应的内容类型，则响应的内容类型由被写入的前512字节决定。
+3. `WriteHeader`方法接收一个代表`HTTP`响应状态码的整数作为参数，并将这个整数用作`HTTP`响应的返回状态码；在调用这个方法后，用户可以对`ResponseWriter`写入，但是不能对响应的首部做任何写入操作。如果用户在调用`Write`方法之前没有执行过`WriteHeader`方法，默认会使用200（OK）作为响应的状态码
+
+例子：
+
+```go
+import (
+		"log"
+		"encoding/json"
+		"net/http"
+)
+
+type User struct {
+		Name string
+		Habits []string
+}
+
+func write(w http.ResponseWriter, r *Resquest){
+		w.Header().Set("Content-Type", "application/json")
+		w.Header().Set("X-Custom-Header", "custom") //设置自定义的头部
+		w.WriteHeader(201) //设置创建用户的状态码
+		user := &User{
+				Name: "aoho"
+				Habits: []string{"balls", "running", "hiking"}
+		}
+		json, _ := json.Marshal(user)
+		w.Write(json) //写入创建的用户
+}
+
+func main(){
+		http.handleFunc("/write", write)
+		err := http.ListenAndServe(":8000", nil)
 		if err != nil {
 				log.Fatal("ListenAndServe: ", err)
 		}
