--- a/studying/算法与数据结构（mao888）/2. 排序算法全解析/2. 时间复杂度O(n log n)级排序.md
+++ b/studying/算法与数据结构（mao888）/2. 排序算法全解析/2. 时间复杂度O(n log n)级排序.md
@@ -160,6 +160,45 @@ func shellSort(arr []int) {
 - 对于有 `n` 个元素的完全二叉树(n≥2)，它的最后一个非叶子结点的下标：`n/2 - 1`
 
 堆排序代码如下：
-~~~go
-func 
-~~~
+```go
+func heapSort(arr []int){
+	//构建初始大顶堆
+	buildMaxHeap(arr)
+	for i := len(arr)-1; i > 0; i-- {
+		//将最大值交换到数组最后
+		arr[0], arr[i] = arr[i], arr[0]
+		//调整剩余数组，使其满足大顶堆
+		maxHeapify(arr, 0, i)
+	}
+}
+
+//初始化
+func buildMaxHeap(arr []int) {
+	//从最后一个非叶子节点开始调整大顶堆，最后一个非叶子节点的下标就是len(arr)/2 - 1
+	for i := len(arr)/2 - 1; i >= 0; i-- {
+		maxHeapify(arr, i, len(arr))
+	}
+}
+
+// 调整大顶堆，第三个参数表示剩余未排序的数字的数量，也就是剩余堆的大小
+func maxHeapify(arr []int, i int, heapSize int) {
+	//左下节点下标
+	l := 2 * i + 1
+	// 右下节点下标
+	r := l + 1
+	//记录根节点、左子树节点、右子树节点三者中的最大值下标
+	largest := i
+	if l < largest && arr[l] > arr[largest] {
+		largest = l
+	}
+	if r < largest && arr[r] > arr[largest] {
+		largest = r
+	}
+	if largest != i {
+		//将最大值交换为根节点
+		arr[i], arr[largest] = arr[largest], arr[i]
+		//再次调整交换后的大顶堆
+		maxHeapify(arr, largest, heapSize)
+	}
+}
+```
