--- a/studying/算法与数据结构（mao888）/2. 排序算法全解析/2. 时间复杂度O(n log n)级排序.md
+++ b/studying/算法与数据结构（mao888）/2. 排序算法全解析/2. 时间复杂度O(n log n)级排序.md
@@ -188,10 +188,10 @@ func maxHeapify(arr []int, i int, heapSize int) {
 	r := l + 1
 	//记录根节点、左子树节点、右子树节点三者中的最大值下标
 	largest := i
-	if l < largest && arr[l] > arr[largest] {
+	if l < heapSize && arr[l] > arr[largest] {
 		largest = l
 	}
-	if r < largest && arr[r] > arr[largest] {
+	if r < heapSize && arr[r] > arr[largest] {
 		largest = r
 	}
 	if largest != i {
