--- a/studying/算法与数据结构（mao888）/2. 排序算法全解析/2. 时间复杂度O(n log n)级排序.md
+++ b/studying/算法与数据结构（mao888）/2. 排序算法全解析/2. 时间复杂度O(n log n)级排序.md
@@ -202,3 +202,215 @@ func maxHeapify(arr []int, i int, heapSize int) {
 	}
 }
 ```
+堆排序的第一步就是构建大顶堆，对应代码中的 `buildMaxHeap` 函数。我们将数组视作一颗完全二叉树，从它的最后一个非叶子结点开始，调整此结点和其左右子树，使这三个数字构成一个大顶堆。
+
+调整过程由 `maxHeapify` 函数处理， `maxHeapify` 函数记录了最大值的下标，根结点和其左右子树结点在经过比较之后，将最大值交换到根结点位置。这样，这三个数字就构成了一个大顶堆。
+
+需要注意的是，如果根结点和左右子树结点任何一个数字发生了交换，则还需要保证调整后的子树仍然是大顶堆，所以子树会执行一个递归的调整过程。
+
+当构建出大顶堆之后，就要把冠军交换到数列最后，深藏功与名。来到冠军宝座的新人又要和李小胖一样，开始向下比较，找到自己的真实位置，使得剩下的 n - 1 个数字构建成新的大顶堆。这就是 `heapSort` 方法的 `for` 循环中，调用 `maxHeapify` 的原因。
+
+变量 `heapSize` 用来记录还剩下多少个数字没有排序完成，每当交换了一个堆顶的数字，`heapSize` 就会减 1。在 `maxHeapify` 方法中，使用 `heapSize` 来限制剩下的选手，不要和已经躺在数组最后，当过冠军的人比较，免得被暴揍。
+
+> 注：在有的文章中，作者将堆的根节点下标视为 11，这样做的好处是使得第 `i` 个结点的左子结点下标为 `2i`，右子结点下标为 `2i + 1`，与 `2i + 1` 和 `2i + 2` 相比，计算量会少一点，本文未采取这种实现，但两种实现思路的核心思想都是一致的。
+
+## 时间复杂度 & 空间复杂度
+
+堆排序分为两个阶段：初始化建堆（`buildMaxHeap`）和重建堆（`maxHeapify`，直译为大顶堆化）。所以时间复杂度要从这两个方面分析。
+
+根据数学运算可以推导出初始化建堆的时间复杂度为 O(n)，重建堆的时间复杂度为 O(nlog⁡n)，所以堆排序总的时间复杂度为 O(nlog⁡n)。推导过程较为复杂，故不再给出证明过程。
+
+堆排序的空间复杂度为 O(1)，只需要常数级的临时变量。
+
+
+# 快速排列
+
+快速排序算法由 C. A. R. Hoare 在 1960 年提出。它的时间复杂度也是 O(nlogn)，但它在时间复杂度为 O(nlogn) 级的几种排序算法中，大多数情况下效率更高，所以快速排序的应用非常广泛。再加上快速排序所采用的分治思想非常实用，使得快速排序深受面试官的青睐，所以掌握快速排序的思想尤为重要。
+
+快速排序算法的基本思想是：
+
+- 从数组中取出一个数，称之为基数（pivot）
+- 遍历数组，将比基数大的数字放到它的右边，比基数小的数字放到它的左边。遍历完成后，数组被分成了左右两个区域
+- 将左右两个区域视为两个数组，重复前两个步骤，直到排序完成
+
+事实上，快速排序的每一次遍历，都将基数摆到了最终位置上。第一轮遍历排好 1 个基数，第二轮遍历排好 2 个基数（每个区域一个基数，但如果某个区域为空，则此轮只能排好一个基数），第三轮遍历排好 4 个基数（同理，最差的情况下，只能排好一个基数），以此类推。总遍历次数为 logn～n 次，每轮遍历的时间复杂度为 O(n)，所以很容易分析出快速排序的时间复杂度为 O(nlogn) ～ O(n^2)，平均时间复杂度为 O(nlogn)。
+
+## 快速排序递归框架
+
+```go
+func quickSort(arr []int) {
+	quickSort2(arr, 0, len(arr)-1)
+}
+
+func quickSort2(arr []int, start int, end int){
+	//将数组分区，并获得中间值的下标
+	middle := partition(arr, start, end)
+	//对左边区域快排
+	quickSort2(arr, start, middle - 1)
+	//对右边区域快排
+	quickSort2(arr, middle + 1, end)
+}
+
+func partition(arr []int, start int, end int){
+	//将arr从start到end分区，左边区域比基数小，右边区域比基数大，然后返回中间值的下标
+}
+```
+partition 意为“划分”，我们期望 partition 函数做的事情是：将 arr 从 start 到 end 这一区间的值分成两个区域，左边区域的每个数都比基数小，右边区域的每个数都比基数大，然后返回中间值的下标。
+
+只要有了这个函数，我们就能写出快速排序的递归函数框架。首先调用 partition 函数得到中间值的下标 middle，然后对左边区域执行快速排序，也就是递归调用 `quickSort(arr, start, middle - 1)`，再对右边区域执行快速排序，也就是递归调用 `quickSort(arr, middle + 1, end)`。
+
+现在还有一个问题，何时退出这个递归函数呢？
+
+## 退出递归的边界条件
+
+很容易想到，当某个区域只剩下一个数字的时候，自然不需要排序了，此时退出递归函数。实际上还有一种情况，就是某个区域只剩下 0 个数字时，也需要退出递归函数。当 middle 等于 start 或者 end 时，就会出现某个区域剩余数字为 0。
+
+所以我们可以通过这种方式退出递归函数：
+
+~~~go
+func quickSort2(arr []int, start int, end int){
+	//将数组分区，并获得中间值的下标
+	middle := partition(arr, start, end)
+	// 当左边区域中至少有 2 个数字时，对左边区域快排
+	if start != middle && start != middle - 1 {
+		quickSort2(arr, start, middle - 1)
+	}
+	// 当右边区域中至少有 2 个数字时，对右边区域快排
+	if middle != end && middle != end - 1 {
+		quickSort2(arr, middle + 1, end)
+	}
+}
+~~~
+
+在递归之前，先判断此区域剩余数字是否为 0 个或者 1 个，当数字至少为 2 个时，才执行这个区域的快速排序。因为我们知道 `middle >= start && middle <= end` 必然成立，所以判断剩余区域的数字为 0 个或者 1 个也就是指 start 或 end 与 middle 相等或相差 1。
+
+我们来分析一下这四个判断条件：
+
+- 当 `start == middle` 时，相当于 `quickSort(arr, start, middle - 1)` 中的 start == end + 1
+- 当 `start == middle - 1` 时，相当于 `quickSort(arr, start, middle - 1)` 中的 start == end
+- 当 `middle == end` 时，相当于 `quickSort(arr, middle + 1, end)` 中的 start == end + 1
+- 当 `middle == end -1` 时，相当于 `quickSort(arr, middle + 1, end)` 中的 start == end
+
+综上，我们可以将此边界条件统一移到 quickSort 函数之前:
+
+~~~go
+func quickSort2(arr []int, start int, end int){
+	// 如果区域中的数字少于2个，退出递归
+	if start == end || start == end + 1 {
+		return
+	}
+	//将数组分区，并获得中间值的下标
+	middle := partition(arr, start, end)
+	//对左边区域快排
+	quickSort2(arr, start, middle - 1)
+	//对右边区域快排
+	quickSort2(arr, middle + 1, end)
+}
+~~~
+
+更进一步，由上文所说的 `middle >= start && middle <= end` 可以推出，除了`start == end || start == end + 1`这两个条件之外，其他的情况下 start 都小于 end。所以我们可以将这个判断条件再次简写为：
+
+~~~go
+func quickSort2(arr []int, start int, end int){
+	// 如果区域中的数字少于2个，退出递归
+	if start >= end {
+		return
+	}
+	//将数组分区，并获得中间值的下标
+	middle := partition(arr, start, end)
+	//对左边区域快排
+	quickSort2(arr, start, middle - 1)
+	//对右边区域快排
+	quickSort2(arr, middle + 1, end)
+}
+~~~
+
+## 分区算法实现
+
+快速排序中最重要的便是分区算法，也就是 partition 函数。大多数人都能说出快速排序的整体思路，但实现起来却很难一次写对。主要问题就在于分区时存在的各种边界条件，需要读者亲自动手实践才能加深体会。
+
+上文已经说到，partition 函数需要做的事情就是将 arr 从 start 到 end 分区，左边区域比基数小，右边区域比基数大，然后返回中间值的下标。那么首先我们要做的事情就是选择一个基数，基数我们一般称之为 pivot，意为“轴”。整个数组就像围绕这个轴进行旋转，小于轴的数字旋转到左边，大于轴的数字旋转到右边。（所谓的双轴快排就是一次选取两个基数，将数组分为三个区域进行旋转，关于双轴快排的内容我们将在后续章节讲解。）
+
+### 基数的选择
+
+基数的选择没有固定标准，随意选择区间内任何一个数字做基数都可以。通常来讲有三种选择方式：
+
+- 选择第一个元素作为基数
+- 选择最后一个元素作为基数
+- 选择区间内一个随机元素作为基数
+
+选择的基数不同，算法的实现也不同。实际上第三种选择方式的平均时间复杂度是最优的，待会分析时间复杂度时我们会详细说明。
+
+本文通过第一种方式来讲解快速排序：
+
+~~~go
+func partition(arr []int, start int, end int){
+	// 取第一个数为基数
+	pivot := arr[start]
+	// 取第二个数开始分区
+	left := start + 1
+	// 右边界
+	right := end
+	// TODO
+}
+~~~
+### 最简单的分区算法
+
+分区的方式也有很多种，最简单的思路是：从 left 开始，遇到比基数大的数，就交换到数组最后，并将 right 减一，直到 left 和 right 相遇，此时数组就被分成了左右两个区域。再将基数和中间的数交换，返回中间值的下标即可。
+
+按照这个思路，我们敲出了如下代码：
+
+~~~go
+func partition(arr []int, start ing, end int) {
+	// 取第一个数为基数
+	pivot := arr[start]
+	// 取第二个数开始分区
+	left := start + 1
+	// 右边界
+	right := end
+	// left right相遇时提出循环
+	for left < right {
+		//找到第一个大于基数的位置
+		for left < right && arr[left] <= pivot {
+			left++
+		}
+		// 交换
+		if left != right {
+			arr[left], arr[right] = arr[right], arr[left]
+			right--
+		}
+	}
+	//如果左右相等，单独比较arr[right]和pivot
+	if left == right && arr[right] > pivot {
+		right--
+	}
+	// 将基数和中间数互换
+	if right != start {
+		arr[start], arr[right] = arr[right], arr[start]
+	}
+	// 返回中间值的下标
+	return right
+}
+~~~
+
+因为我们选择了数组的第一个元素作为基数，并且分完区后，会执行将基数和中间值交换的操作，这就意味着交换后的中间值会被分到左边区域。所以我们需要保证中间值的下标是分区完成后，最后一个比基数小的值，这里我们用 right 来记录这个值。
+
+这段代码有一个细节。首先，在交换 left 和 right 之前，我们判断了 left != right，这是因为如果剩余的数组都比基数小，则 left 会加到 right 才停止，这时不应该发生交换。因为 right 已经指向了最后一个比基数小的值。
+
+但这里的拦截可能会拦截到一种错误情况，如果剩余的数组只有最后一个数比基数大，left 仍然加到 right 停止了，但我们并没有发生交换。所以我们在退出循环后，单独比较了 arr[right] 和 pivot。
+
+实际上，这行单独比较的代码非常巧妙，一共处理了三种情况：
+
+- 一是刚才提到的剩余数组中只有最后一个数比基数大的情况
+- 二是 left 和 right 区间内只有一个值，则初始状态下， left == right，所以 `while (left < right)` 根本不会进入，所以此时我们单独比较这个值和基数的大小关系
+- 三是剩余数组中每个数都比基数大，此时 right 会持续减小，直到和 left 相等退出循环，此时 left 所在位置的值还没有和 pivot 进行比较，所以我们单独比较 left 所在位置的值和基数的大小关系
+
+### 双指针分区算法
+
+除了上述的分区算法外，还有一种双指针的分区算法更为常用：从 left 开始，遇到比基数大的数，记录其下标；再从 right 往前遍历，找到第一个比基数小的数，记录其下标；然后交换这两个数。继续遍历，直到 left 和 right 相遇。然后就和刚才的算法一样了，交换基数和中间值，并返回中间值的下标。
+
+代码如下：
+
+~~~go
+
+~~~
