--- a/studying/算法与数据结构（mao888）/2. 排序算法全解析/2. 时间复杂度O(n log n)级排序.md
+++ b/studying/算法与数据结构（mao888）/2. 排序算法全解析/2. 时间复杂度O(n log n)级排序.md
@@ -412,5 +412,308 @@ func partition(arr []int, start ing, end int) {
 代码如下：
 
 ~~~go
-
+func partition(arr []int, start int, end int) {
+	// 取第一个数为基数
+	pivot := arr[start]
+	// 从第二个数开始分区
+	left = start + 1
+	right = end
+	for left < right {
+		// 找到第一个大于基数的位置
+		for left < right && arr[left] <= pivot {
+			left++
+		}
+		// 找到第一个小于基数的位置
+		for legt < right && arr[right] >= pivot {
+			right--
+		}
+		// 交换两个数，使得左边分区都小于或等于基数，右边分区大于或等于基数
+		if left < right {
+			arr[left], arr[right] = arr[right], arr[left]
+			left++
+			reght--
+		}
+	}
+	// 如果 right 和 left 相等，单独比较arr[right]和pivot
+	if left == right {
+		right--
+	}
+	// 将基数和轴互换
+	arr[start], arr[right] = arr[right], arr[start]
+	return right
+}
 ~~~
+从代码实现中可以分析出，快速排序是一种不稳定的排序算法，在分区过程中，相同数字的相对顺序可能会被修改。
+
+
+## 时间复杂度 & 空间复杂度
+
+快速排序的时间复杂度上文已经提到过，平均时间复杂度为 O(nlogn)，最坏的时间复杂度为 O(n^2)，空间复杂度与递归的层数有关，每层递归会生成一些临时变量，所以空间复杂度为 O(logn) ~ O(n)，平均空间复杂度为 O(logn)。
+
+回到前文提到的那个问题，为什么说随机选择剩余数组中的一个元素作为基数的方案平均复杂度是最优的呢？要理清这个问题，我们先来看一下什么情况下快速排序算法的时间复杂度最高，一共有两种情况。
+
+理想中的快速排序在第 k 轮遍历中，可以排好 2k−12^{k-1} 个基数。但从图中我们发现，当数组原本为正序或逆序时，我们将第一个数作为基数的话，每轮分区后，都有一个区域是空的，也就是说数组中剩下的数字都被分到了同一个区域！这就导致了每一轮遍历只能排好一个基数。所以总的比较次数为 `(n - 1) + (n - 2) + (n - 3) + ... + 1` 次，由等差数列求和公式可以计算出总的比较次数为 `n(n - 1)/2` 次，此时快速排序的时间复杂度达到了 O(n^2) 级。
+
+有的读者可能会疑惑，既然数组已经有序了，为什么还要再对其排序呢？这个操作看起来毫无意义。但事实可能让你大吃一惊，因为在实际工作中，这种重复排序的需求非常常见。
+
+设想一个场景，前端程序员从第三方平台提供的接口中获取一列数据，并且产品部门要求前端必须保证这一列数据在展示给用户时是有序的。在测试环境下，前端程序员发现从第三方平台获取到的数据总是有序的，但为了保险起见，他还是不得不对收到的数据再次进行排序。因为第三方平台提供的数据是不可控的，他不能选择相信后台，否则万一哪天后台提供的数据变成了无序的，给用户展示数据时就会出现问题。于是这里就发生了重复排序，此时如果直接使用快速排序就可能出现排序速度很慢，拖慢程序性能的问题。
+
+如何解决这样的问题呢？其实思路也很简单，只要我们每轮选择的基数不是剩余数组中最大或最小的值就可以了。具体方案有很多种，其中较常用的有三种。
+
+## 快速排序的优化思路
+
+第一种就是我们在前文中提到的，每轮选择基数时，从剩余的数组中随机选择一个数字作为基数。这样每轮都选到最大或最小值的概率就会变得很低了。所以我们才说用这种方式选择基数，其平均时间复杂度是最优的
+
+第二种解决方案是在排序之前，先用洗牌算法将数组的原有顺序打乱，以防止原数组正序或逆序。
+
+还有一种解决方案，既然数组重复排序的情况如此常见，那么我们可以在快速排序之前先对数组做个判断，如果已经有序则直接返回，如果是逆序则直接倒序即可。在 Java 内部封装的 `Arrays.sort()` 的源码中就采用了此解决方案。
+
+
+# 归并排序
+
+约翰·冯·诺伊曼在 1945 年提出了归并排序。在讲解归并排序之前，我们先一起思考一个问题：如何将两个有序的列表合并成一个有序的列表？
+
+## 将两个有序的列表合并成一个有序的列表
+
+既然列表已经有序了，通过前几章的学习，我们已经知道，插入排序的过程中，被插入的数组也是有序的。这就好办了，我们将其中一个列表中的元素逐个插入另一个列表中即可。
+
+但是按照这个思路，我们只需要一个列表有序就行了，另一个列表不管是不是有序的，都会被逐个取出来，插入第一个列表中。那么，在两个列表都已经有序的情况下，还可以有更优的合并方案吗？
+
+深入思考之后，我们发现，在第二个列表向第一个列表逐个插入的过程中，由于第二个列表已经有序，所以后续插入的元素一定不会在前面插入的元素之前。在逐个插入的过程中，每次插入时，只需要从上次插入的位置开始，继续向后寻找插入位置即可。这样一来，我们最多只需要将两个有序数组遍历一次就可以完成合并。
+
+思路很接近了，如何实现它呢？我们发现，在向数组中不断插入新数字时，原数组需要不断腾出位置，这是一个比较复杂的过程，而且这个过程必然导致增加一轮遍历。
+
+但好在我们有一个替代方案：只要开辟一个长度等同于两个数组长度之和的新数组，并使用两个指针来遍历原有的两个数组，不断将较小的数字添加到新数组中，并移动对应的指针即可。
+
+根据这个思路，我们可以写出合并两个有序列表的代码：
+
+~~~go
+func merge(arr1 []int, arr2 []int) []int {
+	result := make([]int, len(arr1) + len(arr2))
+	var index1, index2 int
+	for index1 < len(arr1) && index2 < len(arr2) {
+		if arr1[index] <= arr2[index] {
+			result[index1 + index2] = arr1[index1]
+			index1++
+		}else {
+			result[index1 + index2] = arr2[index2]
+			index2++
+		}
+	}
+	// 将剩余的数字补到结果数组后
+	for index1 < len(arr1) {
+		result[index1 + index2] = arr[index1]
+		index1++
+	}
+	for index2 < len(arr2) {
+		result[index1 + index2] = arr[index2]
+		index2++
+	}
+	return result
+}
+~~~
+
+这份代码的实现思路和我们分析的一模一样：首先开辟了一个新数组 result，长度等同于 arr1 和 arr2 的长度之和，然后使用 index1 记录 arr1 数组的下标，index2 记录 arr2 数组的下标。再将两个数组中较小的值不断添加到 result 中。其中，result 的当前下标等同于 index1 和 index2 之和。
+
+如果你对 `++` 运算符用得熟练的话：
+
+```go
+result[index1 + index2] = arr1[index1];
+index1++;
+```
+
+可以简写成：
+
+```go
+result[index1 + index2] = arr1[index1++];
+```
+
+这样代码看起来会更简洁一些。
+
+合并有序数组的问题解决了，但我们排序时用的都是无序数组，那么上哪里去找这两个有序的数组呢？
+
+答案是 —— 自己拆分，我们可以把数组不断地拆成两份，直到只剩下一个数字时，这一个数字组成的数组我们就可以认为它是有序的。
+
+然后通过上述合并有序列表的思路，将 1 个数字组成的有序数组合并成一个包含 2 个数字的有序数组，再将 2 个数字组成的有序数组合并成包含 4 个数字的有序数组...直到整个数组排序完成，这就是归并排序（Merge Sort）的思想。
+
+## 将数组拆分成有序数组
+
+拆分过程使用了二分的思想，这是一个递归的过程，归并排序使用的递归框架如下：
+
+~~~go
+func mergeSort(arr []int) {
+	if len(arr) == 0 {
+		return
+	}
+	result := mergeSort2(arr, 0, len(arr) - 1)
+	//将结果拷贝到arr数组中
+	for i := 0; i < len(result); i++ {
+		arr[i] = result[i]
+	}
+}
+
+// 对arr的[start, end] 区间归并排序
+func mergeSort2(arr []int, start int, end int) {
+	// 只剩下一个数字时停止拆分，返回单个数字组成的数组
+	if start == end {
+		return []int{arr[start]}
+	}
+	middle := (start + end) / 2
+	// 拆分左边区域
+	left := mergeSort2(arr, start, middle)
+	// 拆分右边区域
+	reght := mergeSort2(arr, middle + 1, end)
+	// 合并左右区域
+	return merge(left, right)
+}
+~~~
+
+其中， `mergeSort(int[] arr)` 函数是对外暴露的公共方法，内部调用了私有的`mergeSort2(int[] arr, int start, int end)` 函数，这个函数用于对 arr 的 [start, end] 区间进行归并排序。
+
+这就是最经典的归并排序，只需要一个二分拆数组的递归函数和一个合并两个有序列表的函数即可。
+
+但这份代码还有一个缺点，那就是在递归过程中，开辟了很多临时空间，接下来我们就来看下它的优化过程。
+
+## 归并排序的优化：减少临时空间的开辟
+
+为了减少在递归过程中不断开辟空间的问题，我们可以在归并排序之前，先开辟出一个临时空间，在递归过程中统一使用此空间进行归并即可。
+
+代码如下：
+
+~~~go
+func mergeSort(arr []int) {
+	if len(arr) == 0 {
+		return
+	}
+	result := make([]int, len(arr))
+	mergeSort2(arr, 0, len(arr) - 1, result)
+}
+
+// 对arr的[start, end] 区间归并排序
+func mergeSort2(arr []int, start int, end int, result []int){
+	// 只剩下一个数字时停止拆分，返回单个数字组成的数组
+	if start == end {
+		return []int{arr[start]}
+	}
+	middle := (start + end) / 2
+	// 拆分左边区域，并将归并结果保存到 result 的[start, middle]区间
+	mergeSort2(arr, start, middle, result)
+	// 拆分右边区域，并将归并排序的结果保存到 result 的 [middle + 1, end] 区间
+	mergeSort2(arr, middle + 1, end, result)
+	// 合并左右区域到 result 的 [start, end] 区间
+	merge(arr, start, end, result)
+}
+
+// 将 result 的 [start, middle] 和 [middle + 1, end] 区间合并
+func merge(arr []int, start int, end int, result []int) {
+	middle := (start + end) / 2
+	// 数组1的首尾位置
+	start1 := start
+	end1 := middle
+	// 数组2的首尾位置
+	start2 := middle + 1
+	end2 := end
+	// 用来遍历数组的指针
+	index1 := start1
+	index2 := start2
+	// 结果数组的指针
+	resultIndex := start1
+	for index1 <= end1 && index2 <= end2 {
+		if arr[index1] <= arr[index2]{
+			result[resultIndex++] = arr[index1++]
+		}else {
+			result[resultIndex++] = arr[index2++]
+		}
+	}
+	// 将剩余的数字补到结果后面
+	for index1 <= end1 {
+		result[resultIndex++] = arr[index1++]
+	}
+	for index2 <= end2 {
+        result[resultIndex++] = arr[index2++]
+    }
+    // 将 result 操作区间的数字拷贝到 arr 数组中，以便下次比较
+    for int i = start; i <= end; i++ {
+        arr[i] = result[i]
+    }
+}
+~~~
+在这份代码中，我们统一使用 result 数组作为递归过程中的临时数组，所以`merge` 函数接收的参数不再是两个数组，而是 result 数组中需要合并的两个数组的首尾下标。根据首尾下标可以分别计算出两个有序数组的首尾下标 start1、end1、start2、end2，之后的过程就和之前合并两个有序数组的代码类似了。
+
+这份代码还可以再精简一下，我们可以去掉一些不会改变的临时变量。比如 start1 始终等于 start，end2 始终等于 end，end1 始终等于 middle。并且分析可知，resultIndex 的值始终等于 start 加上 index1 和 index2 移动的距离。即：
+
+~~~go
+resultIndex = start + (index1 - start1) + (index2 - start2)
+~~~
+将 `start1 == start` 代入，化简得：
+~~~go
+resultIndex = index1 + index2 - start2
+~~~
+
+牺牲了一些可读性，代码变得精简了不少。
+
+## 原地归并排序？
+
+现在的归并排序看起来仍"美中不足"，那就是仍然需要开辟额外的空间，能不能实现不开辟额外空间的归并排序呢？好像是可以做到的。在一些文章中，将这样的归并排序称之为 `In-Place Merge Sort`，直译为原地归并排序。
+
+代码实现思路主要有两种：
+
+一种是在合并 arr 的 [start, middle] 区间和 [middle + 1, end] 区间时，将两个区间较小的数字移动到 index1 的位置，并且将左边区域不断后移，目的是给新插入的数字腾出位置。最后更新两个区间的下标，继续合并更新后的区间。
+
+另一种在合并区间时，同样是将两个区间中较小的数字移到 index1 的位置，不过采用的是两个区间的首个数字直接交换的思路，交换完成后，将交换到右边区间的数字不断后移，以使得右边区间继续保持有序。
+
+这样实现的归并本质上是插入排序！前文已经说到，在插入排序中，腾出位置是一个比较复杂的过程，而且这个过程必然导致增加一轮遍历。在这两份代码中，每一次合并数组时，都使用了两层循环，目的就是不断腾挪位置以插入新数字，可以看出这里合并的效率是非常低的。这两种排序算法的时间复杂度都达到了 O(n^2) 级，不能称之为归并排序。它们只是借用了归并排序的递归框架而已。
+
+也就是说，所谓的[原地归并排序]事实上并不存在，许多算法书籍中都没有收录这种算法。它打着归并排序的幌子，卖的是插入排序的思想，实际排序效率比归并排序低得多。
+
+
+# 小结
+
+本章我们介绍了四种优秀的排序算法：希尔排序、堆排序、快速排序、归并排序。
+
+### 希尔排序
+
+
+- 希尔排序是一个承上启下的算法，通过交换间隔较远的元素，使得一次交换能消除一个以上的逆序对，打破了在空间复杂度为 O(1) 的情况下，时间复杂度 O(n^2) 的魔咒。它启发出了后续一系列时间复杂度为 O(nlog⁡n)，空间复杂度为 O(1) 的排序算法。
+- 希尔排序本质上是插入排序的优化，先对间隔较大的元素进行插入排序，完成宏观调控，然后逐步缩小间隔，最后一轮一定是间隔为 1 的排序，也就是插入排序。间隔在希尔排序中被称为「增量」，增量序列不同，希尔排序的效率也不同。
+
+### 堆排序
+
+
+堆排序分为两步：初始化建堆、重建堆。排序过程是：
+
+- 用数列构建出一个大顶堆，取出堆顶的数字；
+- 调整剩余的数字，构建出新的大顶堆，再次取出堆顶的数字；
+- 循环往复，完成整个排序。
+
+### 快速排序
+
+
+快速排序算法是面试中考察的重点，也是应用最广泛的排序算法。排序过程是：
+
+- 从数组中取出一个数，称之为基数（`pivot`）；
+- 遍历数组，将比基数大的数字放到它的右边，比基数小的数字放到它的左边。遍历完成后，数组被分成了左右两个区域；
+- 将左右两个区域视为两个数组，重复前两个步骤，直到排序完成。
+
+快速排序中最重要的是分区算法，最常用的分区算法是双指针分区算法，优点是一次交换可以完成两个数的分区。
+
+### 归并排序
+
+
+- 归并排序分为两步：二分拆数组、不断合并两个有序列表。
+- 归并的优化主要在于减少临时空间的开辟。
+- 不存在空间复杂度为 O(1) 的归并排序。
+
+### 相同点
+
+
+- 平均时间复杂度都在 O(n)到 O(n^2) 之间。
+
+### 不同点
+
+
+- 希尔排序、堆排序、快速排序是不稳定的，归并排序是稳定的。
+- 希尔排序的平均复杂度界于 O(n) 到 O(n^2) 之间，普遍认为它最好的时间复杂度为 O(n^{1.3})，希尔排序的空间复杂度为 O(1)；
+- 堆排序的时间复杂度为 O(n\log n)，空间复杂度为 O(1)，
+- 快速排序的平均时间复杂度为 O(nlog⁡n)，平均空间复杂度为O(log n)；
+- 归并排序的时间复杂度是 O(n log⁡n)，空间复杂度是 O(n)。
