--- a/studying/算法与数据结构（mao888）/3. 进制和位运算/例题.md
+++ b/studying/算法与数据结构（mao888）/3. 进制和位运算/例题.md
@@ -1,7 +1,81 @@
 ### 题1：[504. 七进制数](https://leetcode-cn.com/problems/base-7/)
+~~~go
+func convertToBase7(num int) string {
+
+    if num == 0 {
+        return "0"
+    }
+    // 判断正负
+    isPositive := true
+    if num < 0 {
+        isPositive = false
+        num = -num
+    }
+    var remander []byte
+    for num > 0 {
+        remander = append(remander, byte(num % 7)+48)
+        num /= 7
+    }
+    result := ""
+    if !isPositive {
+        result += "-"
+    }
+    for i := len(remander) - 1; i >= 0; i-- {
+        result += string(remander[i])
+    }
+    return result
+}
+~~~
 ### 题2：[405. 数字转换为十六进制数](https://leetcode-cn.com/problems/convert-a-number-to-hexadecimal/)
+~~~go
+func toHex(num int) string {
+    if num == 0 {
+        return "0"
+    }
+    sb := ""
+    for i := 7; i >= 0; i-- {
+        val := num >> (4 * i) & 0Xf // 位移后与后四位求与
+        var digit byte
+        if val != 0 || len(sb) != 0 {
+            if val < 10{
+                digit = '0' + byte(val)
+            }else {
+                digit = 'a' + byte(val-10)
+            }
+            sb += string(digit)
+        }
+    }
+    return sb
+}
+~~~
 ### 题3. [371. 两整数之和](https://leetcode-cn.com/problems/sum-of-two-integers/)
+
+可以发现，对于整数 a 和 b：
+
+- 在不考虑进位的情况下，结果是 $a\oplus b$
+- 而所有需要进位的位为 $a\&b$, 进位后的结果是 $a\&b<<1$
+~~~go
+func getSum(a int, b int) int {
+    for b != 0 {
+        carry := uint(a&b) << 1
+        a ^= b
+        b = int(carry)
+    }
+    return a
+}
+~~~
 ### 题4. [191. 位1的个数](https://leetcode-cn.com/problems/number-of-1-bits/)
+~~~go
+func hammingWeight(num uint32) int {
+    var ones int
+    for i := 0; i < 32; i++ {
+        if 1 << i & num > 0{
+            ones++
+        }
+    }
+    return ones
+}
+~~~
 ### 题5. [190. 颠倒二进制位](https://leetcode-cn.com/problems/reverse-bits/)
 
 ### 题6. [89. 格雷编码](https://leetcode-cn.com/problems/gray-code/)
