--- a/studying/算法与数据结构（mao888）/3. 进制和位运算/例题.md
+++ b/studying/算法与数据结构（mao888）/3. 进制和位运算/例题.md
@@ -77,6 +77,27 @@ func hammingWeight(num uint32) int {
 }
 ~~~
 ### 题5. [190. 颠倒二进制位](https://leetcode-cn.com/problems/reverse-bits/)
+~~~go 
+func reverseBits(num uint32) uint32 {
+
+    var reverse uint32 = 0
+
+    for i := 0; i < 32; i++ {
+
+        reverse += (num >> i) & 1
+
+        if i != 31 {
+
+            reverse = reverse << 1
+
+        }
+
+    }
+
+    return reverse
+
+}
+~~~
 
 ### 题6. [89. 格雷编码](https://leetcode-cn.com/problems/gray-code/)
 
