--- a/studying/算法与数据结构（mao888）/3. 进制和位运算/例题.md
+++ b/studying/算法与数据结构（mao888）/3. 进制和位运算/例题.md
@@ -101,6 +101,20 @@ func reverseBits(num uint32) uint32 {
 
 ### 题6. [89. 格雷编码](https://leetcode-cn.com/problems/gray-code/)
 
+脑子坏了，背公式吧
+可以使用公式直接求出。第 i (i≥0) 个格雷码即为：
+$$g_i=i⊕⌊\frac{i}{2}⌋$$
+~~~go
+func grayCode(n int) []int { 
+	ans := make([]int, 1<<n) 
+	for i := range ans { 
+		ans[i] = i>>1 ^ i 
+	} 
+return ans 
+} 
+~~~
+
+
 ### 题7. [338. 比特位计数](https://leetcode-cn.com/problems/counting-bits/)
 
 ### 题8. [136. 只出现一次的数字](https://leetcode-cn.com/problems/single-number/)
