--- a/studying/算法与数据结构（mao888）/3. 进制和位运算/例题.md
+++ b/studying/算法与数据结构（mao888）/3. 进制和位运算/例题.md
@@ -117,7 +117,26 @@ return ans
 
 ### 题7. [338. 比特位计数](https://leetcode-cn.com/problems/counting-bits/)
 
+~~~go
+//试图写O(n)失败抄答案， 我是飞舞
+func countBits(n int) []int {
+    bits := make([]int, n+1)
+    for i := 1; i <= n; i++ {
+        bits[i] = bits[i>>1] + i&1
+    }
+    return bits
+}
+~~~
+
 ### 题8. [136. 只出现一次的数字](https://leetcode-cn.com/problems/single-number/)
+~~~go
+func singleNumber(nums []int) int {
+    for i := 1; i< len(nums); i++ {
+        nums[0] = nums[0] ^ nums[i]
+    }
+    return nums[0]
+}
+~~~
 
 ### 题9. [137. 只出现一次的数字 II](https://leetcode-cn.com/problems/single-number-ii/)
 
