--- a/studying/算法与数据结构（mao888）/3. 进制和位运算/例题.md
+++ b/studying/算法与数据结构（mao888）/3. 进制和位运算/例题.md
@@ -139,5 +139,43 @@ func singleNumber(nums []int) int {
 ~~~
 
 ### 题9. [137. 只出现一次的数字 II](https://leetcode-cn.com/problems/single-number-ii/)
+~~~go
+func singleNumber(nums []int) int {
+    //答案的第 i 个二进制位就是数组中所有元素的第 i 个二进制位之和除以 3 的余数。
+    ans := int32(0)
+    for i := 0; i < 32; i++ {
+        total := int32(0)
+        for _, num := range nums {
+            total += int32(num) >> i & 1
+        }
+        if total % 3 > 0 {
+            ans |= 1 << i
+        }
+    }
+    return int(ans)
+}
+~~~
 
 ### 题10. [260. 只出现一次的数字 III](https://leetcode-cn.com/problems/single-number-iii/)
+
+还是太菜了
+
+~~~go
+func singleNumber(nums []int) []int { 
+	xorSum := 0 
+	for _, num := range nums { 
+		xorSum ^= num 
+	} 
+	lsb := xorSum & -xorSum 
+	type1, type2 := 0, 0 
+	for _, num := range nums { 
+		if num&lsb > 0 { 
+		type1 ^= num 
+	} else { 
+		type2 ^= num 
+	} 
+} 
+return []int{type1, type2} }
+
+//作者：力扣官方题解 链接：https://leetcode.cn/problems/single-number-iii/solutions/587516/zhi-chu-xian-yi-ci-de-shu-zi-iii-by-leet-4i8e/ 来源：力扣（LeetCode） 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+~~~
