--- a/studying/Gin框架/01. Gin源码解析/2. 请求处理.md
+++ b/studying/Gin框架/01. Gin源码解析/2. 请求处理.md
@@ -1,3 +1,29 @@
 
-# 路由树节点
+以下面代码为例：
+~~~go
+func main(){
+	r := gin.Default()
 
+	r.GET("/", func(c *gin.Context){
+		c.String(http.StatusOK, "ok")
+	})
+
+	r.Run(":8080")
+}
+~~~
+Run( )的源码：
+~~~go
+fnc (engine *Engine) Run(addr ...string)(err error) {
+	defer func(){ debugPrintError(err) }()
+
+	address := resolveAddress(addr)
+	debugPrint("Listening and serving HTTP on %s\n", address)
+	err = http.ListenAndServe(address, engine)
+	return
+}
+~~~
+ListenAndServe 需要一个地址和一个handler 接口
+
+所以 engine 实现了 handler 接口
+
+r是gin.Default()的返回值
