--- a/studying/Gin框架/mySQL/04. MySQL 预处理与 SQL 注入.md
+++ b/studying/Gin框架/mySQL/04. MySQL 预处理与 SQL 注入.md
@@ -18,3 +18,72 @@
 
 1. 优化 MySQL 服务器重复执行 SQL 的方法，可以提升服务器性能，提前让服务器编译，一次编译多次执行，节省后续编译的成本
 2. 避免 SQL 注入问题
+
+# Go 实现预处理
+
+`database/sql`中使用下面的 `Prepare` 方法实现预处理
+~~~go
+func (db *DB) Prepare(query string) (*Stmt, error)
+~~~
+`prepare` 方法会先将 sql 语句发送给 MySQL 服务端，返回一个准备好的状态用于之后的查询和命令。返回值可以同时执行多个查询和命令
+
+示例：
+~~~go
+func prepareQueryDemo() {
+	sqlStr := "select id, name, age from user where id > ?"
+	stmt, err := db.Prepare(sqlStr)
+	if err != nil {
+		fmt.Printf("prepare failed, err:%v\n", err)
+		return
+	}
+	defer stmt.Close()
+	// 查询
+	rows, err := stmt.Query(0)
+	if err != nil {
+		fmt.Printf("query failed, err:%v\n", err)
+		return
+	}
+	defer rows.Close()
+	for rows.Next() {
+		var u user
+		err := rows.Scan(&u.id, &u.name, &u.age)
+		if err != nil {
+			fmt.Printf("scan failed, err:%v", err)
+			return
+		}
+		fmt.Printf("id:%d, name:%s, age:%d\n", u.id, u.name, u.age)
+	}
+}
+~~~
+# SQL 注入问题
+
+<font color = red>我们任何时候都不应该自己拼接 SQL 语句！</font>
+
+自己拼接的例子：
+~~~go
+func sqlInjectDemo(name string) {
+	sqlStr := fmt.Sprintf("select id, name, age from user where name='%s'", name)
+	fmt.Printf("SQL:%s\n", sqlStr)
+	var u user
+	err := db.QueryRow(sqlStr).Scan(&u.id, &u.name, &u.age)
+	if err != nil {
+		fmt.Printf("scan failed, err:%v\n", err)
+		return
+	}
+	fnt.Printf("user:%#v\n", u)
+}
+~~~
+此时以下输入字符段都会引起 SQL 注入问题:
+~~~go
+sqlUbhectDemo("xxx ' or 1=1#") // # 在 sql 中表示注释，只是掉了'%s' 后面的单引号
+sqlUbhectDemo("xxx ' union select * from user #") // union 表示联合查询
+sqlUbhectDemo("xxx ' and (select count(*) from user) <10 #")
+~~~
+# 不同数据库的占位符
+
+| 数据库        | 占位符语法   |
+| ---------- | ------- |
+| MySQL      | ?       |
+| PostgreSQL | $1,$2 等 |
+| SQLite     | ? 和 $1  |
+| Oracle     | :name   |
