--- a/studying/Gin框架/mySQL/05. Go 实现 MySQL 事务.md
+++ b/studying/Gin框架/mySQL/05. Go 实现 MySQL 事务.md
@@ -10,3 +10,51 @@
 通常事务必须满足4个条件（ACID）：原子性（Atomicity，或称不可分割性）、一致性（Consistency）、隔离性（Isolation）、持久性（Durability）
 
 ![[Pasted image 20240323110508.png]]
+
+# 事务的相关方法
+
+Go 中使用3 个方法实现 MySQL 的事务操作
+
+开始事务、提交事务、回滚事务
+~~~go
+func (db *DB) Begin()(* Tx, error)
+func (tx *Tx) Commit() error
+func (tx *Tx) Rollback() error
+~~~
+# 事务示例
+
+下面操作能够确保两次更新操作要么同时成功要么同时失败，不会存在中间状态
+
+~~~go 
+func transactionDemo() {
+	tx, err := db.Begin() 
+	if err != nil {
+		if tx != nil {
+			tx.Rollback() // 回滚
+		}
+		fmt.Printf("begin trans failed, err:%v\n", err)
+		return
+	}
+	sqlStr1 := "Updata user set age=30 where id = ?"
+	_, err = tx.Exec(sqlStr1, 2)
+	if err != nil {
+		tx.Rollback() // 回滚
+		fmt.Printf("exec sql1 failed, err:%v\n", err)
+		return
+	}
+	sqlStr2 := "update user set age=40 where id=?"
+	_, err = tx.Exec(sqlStr2, 4)
+	if err != nil {
+		tx.Rollback() // 回滚
+		fmt.Printf("exec sql1 failed, err:%v\n", err)
+		return
+	}
+	err = tx.Commit() // 提交事务
+	if err != nil {
+		tx.Rollback() 
+		fmt.Printf("commit failed, err:%v\n", err)
+		return
+	}
+	fmt.Println("exec trans success!")
+}
+~~~
