--- a/studying/Gin框架/02. mySQL/05. Go 实现 MySQL 事务.md
+++ b/studying/Gin框架/02. mySQL/05. Go 实现 MySQL 事务.md
@@ -9,7 +9,7 @@
 
 通常事务必须满足4个条件（ACID）：原子性（Atomicity，或称不可分割性）、一致性（Consistency）、隔离性（Isolation）、持久性（Durability）
 
-![[Pasted image 20240323110508.png]]
+![[条件.png]]
 
 # 事务的相关方法
 
