--- a/studying/Gin框架/02. mySQL/06. 使用 sqlx 连接 MySQL.md
+++ b/studying/Gin框架/02. mySQL/06. 使用 sqlx 连接 MySQL.md
@@ -81,3 +81,70 @@ func insertUserDemo()(err error) {
 	return
 }
 ~~~
+## NamedQuery
+
+与 `DB.NamedExec` 同理，这里是支持查询
+~~~go
+//使用map做命名查询
+rows, err := db.NamedQuery(`select * from users where name=:name`,
+						  map[string]interface{
+							  "name": "Li",
+						  })
+type User struct {
+	Name string `db:"name"`
+	Age int `db:"age"`
+}
+u := User {
+	Name: "wang"
+}
+// 使用结构体命名查找
+rows, err = db.NameQuery(`select * from users where name=:name`, u)
+~~~
+## 事务操作
+
+对于事务操作，可以使用 `db.Beginx()` 和 `tx.Exec()` 方法。
+示例：
+~~~go
+func transactionDemo()(err error) {
+	tx, err := db.Beginx() // 开启事务
+	if err != nil {
+		fmt.Printf("begin trans failed, err:%v\n",err)
+		return
+	}
+	defer func() {
+		if p := recover(); p != nil {
+			tx.Rollback()
+			panic(p)
+		}else if err != nil {
+			fmt.Println("rollback")
+			tx.Rollback()
+		}else {
+			err = tx.Commit()
+			fmt.Println("commint")
+		}
+	}()
+	sqlStr1 := "Update user set age=20 where id=?"
+	
+	rs, err := tx.Exec(sqlStr1, 1)
+	if err != nil {
+		return err
+	}
+	n, err := rs.RowsAffected()
+	if n != 1 {
+		return errors.New("exec sqlStr1 failed")
+	}
+	sqlStr2 := "update ser set age=50 where id=?"
+	rs, err = tx.Exec(sqlStrs, 5)
+	if err != nil {
+		return err
+	}
+	n, err = rs.RowsAffected()
+	if err != nil {
+		return err
+	}
+	if n != 1 {
+		return errors.New("exec sqlStr2 failed")
+	}
+	return err
+}
+~~~
