--- a/studying/Gin框架/03. 日志库/01. zap.md
+++ b/studying/Gin框架/03. 日志库/01. zap.md
@@ -97,3 +97,80 @@ Zap 提供了两种类型的日志记录器—— `Sgared Logger`, `Logger`
 
 ### Logger
 
+- 通过调用 `zap.NewProduction()` / `zap.NewDevelopment()` 或者` zap.Example()` 创建一个Logger。
+- 以上函数的区别是 Logger 将记录的信息不同。例如 production Logger 默认记录调用函数信息、日期和时间等
+- 通过 Logger 调用 Info/Error 等
+- 默认情况下日志都会打印到应用程序的console 界面
+~~~go
+var logger *zap.Logger
+
+func main(){
+	InitLogger()
+	defer logger.Sync()
+	simpleHttpGet("www.google.com")
+	simpleHttpGet("http://www.google.com")
+}
+
+func InitLogger(){
+	logger, _ = zap.NewProduction()
+}
+
+func simpleHttpGet(url string) {
+	resp, err := http.Get(url)
+	if err != nil {
+		logger.Error(
+			"error fetching url..",
+			zap.String("url", url),
+			zap.Error(err)
+		)
+	}else {
+		logger.Info(
+			"Success..",
+			zap.String("statusCode", resp.Status),
+			zap.String("url", url)
+		)
+		resp.Body.Close()
+	}
+}
+~~~
+在上面的代码中，我们首先创建了一个 Logger， 然后使用 Info/Error 等方法记录消息
+
+日志记录器的方法的语法是：
+~~~go
+func (log *Logger) MethodXXX(msg string, fields ...Field)
+~~~
+MethodXXX 是指 Info, Error, Debug, Panic 等。每个方法都接受一个消息字符串和任意数量的 `zapcore.Field` 场参数
+
+### Sugared Logger
+
+- 大部分的实现基本相同
+- 唯一的区别是，我们通过调用主 Logger 的 Sugar（）方法来获取一个 `SugaredLogger`
+- 然后使用 `SugaredLogger` 以 printf 格式记录语句
+
+~~~go
+var sugarLogger *zap.SugaredLogger
+
+func main() {
+	InitLogger()
+	defer sugerLogger.Sync()
+	simpleHttpGet("www.google.com")
+	simpleHttpGet("http://www.google.com")
+}
+
+func InitLogger() {
+	logger, _ := zap.NewProduction()
+	sugarLogger = logger.Sugar()
+}
+
+func simpleHttpGet(url string) {
+	sugarLogger.Debugf("Trying to hit GET request for %s", url)
+	resp, err := http.Get(url)
+	if err != nil {
+		sugarLogger.Errorf("Error fetching URL %s : Error = %s", url, err)
+	}else {
+		sugarLogger.Infof("Success! statusCode = %s for URL %s", resp.Status, url)
+		resp.Body.Close()
+	}
+}
+~~~
+
