--- a/studying/Gin框架/03. 日志库/02. zap 日志库自定义配置项.md
+++ b/studying/Gin框架/03. 日志库/02. zap 日志库自定义配置项.md
@@ -38,7 +38,7 @@ func getEncoder() zapcore.Encoder {
 	return zapcore.NewJSONEncoder(zap.NewProductionEncoderConfig())
 }
 func getLogWriter() zapcore.WirteSyncer {
-	fule, _ := os.Creat("./test.log")
+	file, _ := os.Create("./test.log")
 	return zapcore.AddSync(file)
 }
 ~~~
