--- a/studying/Gin框架/03. 日志库/02. zap 日志库自定义配置项.md
+++ b/studying/Gin框架/03. 日志库/02. zap 日志库自定义配置项.md
@@ -38,13 +38,60 @@ func getEncoder() zapcore.Encoder {
 	return zapcore.NewJSONEncoder(zap.NewProductionEncoderConfig())
 }
 func getLogWriter() zapcore.WirteSyncer {
-	file, _ := os.Create("./test.log")
+	file, _ := os.Create("./test.log") // Create 每次创建新文件，可以用 OpenFile 追加
+	// file, _ := os.OpenFile("./test.log", os.O_CREATE|os.O_APPEND|os.O_RDWR, 0744)
 	return zapcore.AddSync(file)
 }
 ~~~
-### 将 JSON Encoder 更改为普通的 Log Encoder
+## 将 JSON Encoder 更改为普通的 Log Encoder
 
 需要将 `NewJSONEncoder()` 更改为 `NewConsoleEncoder()`.
 ~~~go
 return zapcore.NewConsoleEncoder(zap.NewProductionEncoderConfig())
+~~~
+## 更改事件编码并添加调用者详细信息
+
+以上更改有问题：
+- 时间不可读
+- 调用方函数的详细信息没有显示在日志中
+
+我们要做的第一件事是覆盖默认的 `ProductionConfig()` , 并进行以下更改：
+- 修改时间编码器
+- 在日志文件中使用大写字母记录日志级别
+
+~~~ go
+func getEncoder() zapcore.Encoder {
+	encoderConfig := zap.NewProductionEncoderConfig()
+	encoderConfig.EncodeTime = zapcore.ISO8601TimeEncoder
+	encoderConfig.EncodeLevel = zapcore.CapitalLevelEncoder
+	return zapcore.NewConsoleEncoder(encoderConfig)
+}
+~~~
+接下来我们将修改 zap logger 代码，添加将**调用函数信息**记录到日志中的功能。为此，我们将在 `zap.New(...)` 函数中添加一个 Option
+~~~go
+logger := zap.New(core, zap.AddCaller())
+~~~
+# 使用 Lumberjack 进行日志切割归档
+
+zap 本身不支持切割归档，需要通过 Lumberjack 实现
+
+## 安装
+~~~
+go get -u github.com/natefinch/lumberjack
+~~~
+## zap logger 中加入 Lumberjack
+
+需要修改 `WriteSyncer` 代码。我们按照下面的代码修改 `getLogWriter()` 函数：
+
+~~~go
+func getLogWriter() zapcore.WriteSyncer {
+	lumberJackLogger := &lumberjack.Logger{
+		Filename: "./test.log",
+		MaxSize: 10, // 单位是 Mb
+		MaxBackups: 5,  // 备份数量
+		MaxAge: 30, // 备份天数
+		Compress: false, // 是否压缩
+	}
+	return zapcore.AddSync(lumberJackLogger)
+}
 ~~~
