--- a/studying/Gin框架/03. 日志库/03. 使用 zap 接受 gin 框架默认的日志并配置日志归档.md
+++ b/studying/Gin框架/03. 日志库/03. 使用 zap 接受 gin 框架默认的日志并配置日志归档.md
@@ -49,11 +49,55 @@ func GinLogger(logger *zap.Logger) gin.HandlerFunc {
 // GinRecovery recovery 掉可能出现的 panic
 func GinRecovery(logger *zap.Logger, stack bool) gin.HandlerFunc {
 	return func(c *gin.Context) {
-		defer func(){
+		defer func() {
 			if err := recover(); err != nil {
+				// Check for a broken connection, as it is not really a
+				// condition that warrants a panic stack trace.
 				var brokenPipe bool
-				if ne, ok := err.(*net.OpError)
+				if ne, ok := err.(*net.OpError); ok {
+					if se, ok := ne.Err.(*os.SyscallError); ok {
+						if strings.Contains(strings.ToLower(se.Error()), "broken pipe") || strings.Contains(strings.ToLower(se.Error()), "connection reset by peer") {
+							brokenPipe = true
+						}
+					}
+				}
+				
+				httpRequest, _ := httputil.DumpRequest(c.Request, false)
+				if brokenPipe {
+					logger.Error(c.Request.URL.Path,
+						zap.Any("error", err),
+						zap.String("request", string(httpRequest)),
+					)
+					// If the connection is dead, we can't write a status to it.
+					c.Error(err.(error)) // nolint: errcheck
+					c.Abort()
+					return
+				}
+				
+				if stack {
+					logger.Error("[Recovery from panic]",
+						zap.Any("error", err),
+						zap.String("request", string(httpRequest)),
+						zap.String("stack", string(debug.Stack())),
+					)
+				} else {
+					logger.Error("[Recovery from panic]",
+						zap.Any("error", err),
+						zap.String("request", string(httpRequest)),
+					)
+				}
+				c.AbortWithStatus(http.StatusInternalServerError)
 			}
-		}
+		}()
+		c.Next()
 	}
 }
+~~~
+_如果不想自己实现，可以使用github上有别人封装好的[https://github.com/gin-contrib/zap](https://github.com/gin-contrib/zap)。_
+
+这样我们就可以在gin框架中使用我们上面定义好的两个中间件来代替gin框架默认的`Logger()`和`Recovery()`了。
+```go
+r := gin.New()
+r.Use(GinLogger(logger), GinRecovery(logger, true))// logger 全局定义
+
+```
