--- a/studying/Gin框架/03. 日志库/04. 使用 viper 读取配置文件（配置热加载）.md
+++ b/studying/Gin框架/03. 日志库/04. 使用 viper 读取配置文件（配置热加载）.md
@@ -1,1 +1,111 @@
 
+# 安装
+
+~~~
+go get github.com/spf13/viper
+~~~
+
+# 什么是 viper ？
+
+Viper 是适用于 Go 应用程序（包括`Twelve-Factor App`）的配套解决方案。它被设计用在应用程序中工作，并且可以处理所有类型的配置需求和格式。有一下特性：
+
+- 设置默认值
+- 从 JSON、TOML、YAML、HCL、envfile 和 Java Properties 格式的配置文件读取配置信息
+- 实时监控和重新读取配置文件
+- 从环境变量中读取
+- 从远程配置系统（etcd 或 Consul）读取并监控配置变化
+- 从命令行参数读取配置
+- 从buffer读取配置
+- 显示配置值
+
+## Viper 读取优先级
+
+- 显示调用 Set设置值
+- 命令行参数（flag)
+- 环境变量
+- 配置文件
+- key/value 存储
+- 默认值
+
+# 把值存入 Viper
+
+## 建立默认值
+
+一个好的配置系统应该支持默认值。键不需要默认值，但如果没有通过配置文件、环境变量、远程配置或命令行标志设置键，则默认值非常有用。
+
+~~~go
+viper.SetDefault("ContentDir", "content")
+viper.SetDefault("LayoutDir", "layouts")
+viper.SetDefault("Taxonomies", map[string]string{"tag":"tags", "category":"categories"})
+~~~
+
+## 读取配置文件
+
+最少要知道在哪里查找配置文件的配置。Viper 支持  JSON、TOML、YAML、HCL、envfile 和 Java Properties 格式的配置文件。 Viper 可以搜索多个路径，但目前 Viper 实例只支持单个配置文件。Viper 不默认配置搜索路径，将默认决策留给应用程序
+
+下面是一个用 Viper 搜索和读取配置文件的实例。不需要任何特定的路径，但是至少应该提供一个配置文件预期出现的路径
+
+~~~go
+viper.SetConfigName("config") // 配置文件名称（无扩展名）
+viper.SetConfigType("yaml") // 如果配置文件的名称没有扩展名，需配置此项
+// 或者直接使用 viper.SetConfigType("config.yaml")
+viper.AddConfigPath("/etc/appname") // 查找配置文件所在的路径
+viper.AddConfigPath("$HOME/.appname") // 多次调用以添加多个搜索路径
+viper.AddConfigPath(".") // 还可以在工作目录中查看配置
+err := viper.ReadInConfig() // 查找并读取配置文件
+if err != nil {
+	panic(fmt.Errorf("Fatal error config file: %s \n", err))
+}
+~~~
+
+也可以像下面这样处理找不到配置文件的特定情况：
+
+~~~go
+if err := viper.ReadInConfig(); err != nil {
+	if _, ok := err.(viper.ConfigFileNotFoundError); ok {
+		// 配置文件未找到错误，如果需要可以忽略
+	}else {
+		// 配置文件备好到，但产生了其他错误
+	}
+}
+// 配置文件找到并成功解析
+~~~
+
+## 写入配置文件
+
+从配置文件中读取配置是有用的，但是又是想要存储在运行时所作的所有修改。
+
+- WriteConfig - 将当前 viper 配置写入预定义的路径并覆盖（如果存在）。没有预定义会报错
+- SafeWriteConfig - 将当前 viper 配置写入预定义的路径。如果没有预定义，则报错。如果存在，将不会覆盖
+- WriteConfigAs - 将当前 viper 配置写入给定的文件路径。将覆盖给定的文件（如果存在）
+- SafeWriteConfigAs - 将当前的 viper 配置写入给定的文件路径。不会覆盖给定的文件。
+
+示例：
+~~~go
+viper.WriteConfig() // 将当前配置写入 "viper.AddConfigPath()"和"viper.SetConfigName" 设置的预定义路径
+viper.SafeWriteConfig()
+viper.WriteConfigAs("/path/to/my/.config") // 因为该配置写入过，所以会报错
+viper.SaveWriteConfigAs("/path/to/my/.other_config")
+~~~
+
+## 监控并读取配置文件
+
+Viper 支持在运行时实时读取配置文件的功能
+
+viper 驱动可以在运行时读取配置文件的更新，而不会错过任何消息
+
+只需要告诉 viper 实例 `watchConfig`。可选的，可以为 Viper 提供一个回调函数，以便在每次发生更改时运行。
+
+**确保在调用` WatchConfig() `前添加了所有的配置路径**
+
+~~~go
+viper.WatchConfig()
+viper.OnConfigChange(func(e fsnotify.Event){
+	// 配置文件发生更改之后会调用的回调函数
+	fmt.Println("Config file changed:", e.Name)
+})
+~~~
+
+## 从 `io.Reader `读取配置
+
+Viper 预先
