--- a/studying/Gin框架/03. 日志库/04. 使用 viper 读取配置文件（配置热加载）.md
+++ b/studying/Gin框架/03. 日志库/04. 使用 viper 读取配置文件（配置热加载）.md
@@ -108,4 +108,275 @@ viper.OnConfigChange(func(e fsnotify.Event){
 
 ## 从 `io.Reader `读取配置
 
-Viper 预先
+Viper 预先定义了许多配置源，如文件、环境变量、标志和远程K/V存储，但你不受其约束。你还可以实现自己所需的配置源并将其提供给 viper
+~~~go
+viper.SetConfigType("yaml") // 或者 YAML
+
+// 任何需要将此配置添加到程序中的方法
+var yamlExample = []byte(`
+	Hacker: true
+	name: steve
+	hobbies:
+	- skateboarding
+	- snowboarding
+	- go
+	clothing: 
+		jacket: leather
+		trousers: denim
+	age: 35
+	eyes: brown
+	beard: true
+`)
+viper.ReadConfig(bytes.NewBuffer(yamlExample))
+viper.Get("name") // 这里会得到 'steve'
+~~~
+## 覆盖设置
+
+这些可能来自命令行标志，也可能来自自己的程序逻辑
+~~~go
+viper.Set("Verbose", true)
+viper.Set("LogFile", LogFile)
+~~~
+
+## 注册和使用别名
+
+别名允许多个键引用单个值
+~~~go
+viper.RegisterAlias("loud", "Verbose") // 注册别名（此处loud和Verbose建立的别名）
+
+viper.Set("verbose", true) // 结果与下一行相同
+viper.Set("loud", true) // 与上一行相同
+
+viper.GetBool("loud") // true
+viper.GetBool("verbose") // true
+~~~
+## 使用环境变量
+
+Viper 完全支持环境变量。 这使 `Twelve-Factor App` 开箱即用。有五个方法可以帮助与ENV协作：
+- `AutomaticEnv()`
+- `BindEnv(string...):error`
+- `SetEncPrefix(string)`
+- `SetEnvKeyReplacer(string...) *strings.Replacer`
+- `AllowEmptyEnv(bool)`
+
+使用 ENV 变量时，务必要意识到 Viper 将 ENV 变量视为区分大小写
+
+Viper 提供了一种机制来确保 ENV 变量是唯一的。通过使用 `SetEnvPrefix`， 可以告诉Viper在读取环境变量时使用前缀。`BindEnv` 和 `AutomaticEnv` 都将使用这个前缀
+
+`BindEnv` 使用一个或两个参数。第一个是键名称，第二个是环境变量的名称。环境变量的名称区分大小写。如果没有提供 ENV 变量名，那么 Viper 将自动假设 ENV 变量与以下格式匹配：前缀+“\_"+键名全部大写。当你显式提供 ENV 变量名（第二个参数）时，它 _不会_ 自动添加前缀。例如，如果第二个参数是"id"，Viper 将查找环境变量 "ID"。
+
+在使用 ENV 变量时，需要注意的一件事是，每次访问该值时都将读取它。Viper 在调用 `BindEnv` 时不固定该值
+
+`AutomaticEnv`是一个强大的助手，尤其是与`SetEnvPrefix`结合使用时。调用时，Viper会在发出`viper.Get`请求时随时检查环境变量。它将应用以下规则。它将检查环境变量的名称是否与键匹配（如果设置了`EnvPrefix`）。
+
+`SetEnvKeyReplacer`允许你使用`strings.Replacer`对象在一定程度上重写 Env 键。如果你希望在`Get()`调用中使用`-`或者其他什么符号，但是环境变量里使用`_`分隔符，那么这个功能是非常有用的。可以在`viper_test.go`中找到它的使用示例。
+
+或者，你可以使用带有`NewWithOptions`工厂函数的`EnvKeyReplacer`。与`SetEnvKeyReplacer`不同，它接受`StringReplacer`接口，允许你编写自定义字符串替换逻辑。
+
+默认情况下，空环境变量被认为是未设置的，并将返回到下一个配置源。若要将空环境变量视为已设置，请使用`AllowEmptyEnv`方法。
+
+示例：
+~~~go
+SetEnvPrefix("spf") // 将自动转为大写
+BindEnv("id")
+
+os.Setenv("SPF_ID", "13") // 通常在应用程序之外完成
+
+id := Get("id") // 13
+~~~
+
+## 使用 Flags
+
+Viper 具有绑定到标志的能力。具体来说，Viper支持[Cobra](https://github.com/spf13/cobra)库中使用的`Pflag`。
+
+与`BindEnv`类似，该值不是在调用绑定方法时设置的，而是在访问该方法时设置的。这意味着你可以根据需要尽早进行绑定，即使在`init()`函数中也是如此。
+
+对于单个标志，`BindPFlag()`方法提供此功能。
+
+例如：
+~~~go
+serverCmd.Flags().Int("port", 1138, "Port to run Application server on")
+viper.BindPFlag("port", serverCmd.Flags().Lookup("port"))
+~~~
+你还可以绑定一组现有的pflags （pflag.FlagSet）：
+
+举个例子:
+~~~go
+pflag.Int("flagname", 1234, "help message for flagname")
+
+pflag.Parse()
+viper.BindPFlags(pflag.CommandLine)
+
+i := viper.GetInt("flagname") // 从viper而不是从pflag检索值
+~~~
+在 Viper 中使用 pflag 并不阻碍其他包中使用标准库中的 flag 包。pflag 包可以通过导入这些 flags 来处理flag包定义的flags。这是通过调用pflag包提供的便利函数`AddGoFlagSet()`来实现的。
+
+例如：
+~~~go
+package main
+
+import (
+	"flag"
+	"github.com/spf13/pflag"
+)
+
+func main() {
+
+	// 使用标准库 "flag" 包
+	flag.Int("flagname", 1234, "help message for flagname")
+
+	pflag.CommandLine.AddGoFlagSet(flag.CommandLine)
+	pflag.Parse()
+	viper.BindPFlags(pflag.CommandLine)
+
+	i := viper.GetInt("flagname") // 从 viper 检索值
+
+	...
+}
+~~~
+
+## flag 接口
+
+如果你不使用`Pflag`，Viper 提供了两个Go接口来绑定其他 flag 系统。
+
+`FlagValue`表示单个flag。这是一个关于如何实现这个接口的非常简单的例子：
+
+```go
+type myFlag struct {}
+func (f myFlag) HasChanged() bool { return false }
+func (f myFlag) Name() string { return "my-flag-name" }
+func (f myFlag) ValueString() string { return "my-flag-value" }
+func (f myFlag) ValueType() string { return "string" }
+```
+
+一旦你的 flag 实现了这个接口，你可以很方便地告诉Viper绑定它：
+
+```go
+viper.BindFlagValue("my-flag-name", myFlag{})
+```
+
+`FlagValueSet`代表一组 flags 。这是一个关于如何实现这个接口的非常简单的例子:
+
+```go
+type myFlagSet struct {
+	flags []myFlag
+}
+
+func (f myFlagSet) VisitAll(fn func(FlagValue)) {
+	for _, flag := range flags {
+		fn(flag)
+	}
+}
+```
+
+一旦你的flag set实现了这个接口，你就可以很方便地告诉Viper绑定它：
+
+```go
+fSet := myFlagSet{
+	flags: []myFlag{myFlag{}, myFlag{}},
+}
+viper.BindFlagValues("my-flags", fSet)
+```
+## 远程Key/Value存储支持
+
+在Viper中启用远程支持，需要在代码中匿名导入`viper/remote`这个包。
+
+`import _ "github.com/spf13/viper/remote"`
+
+Viper将读取从Key/Value存储（例如etcd或Consul）中的路径检索到的配置字符串（如`JSON`、`TOML`、`YAML`、`HCL`、`envfile`和`Java properties`格式）。这些值的优先级高于默认值，但是会被从磁盘、flag或环境变量检索到的配置值覆盖。（译注：也就是说Viper加载配置值的优先级为：磁盘上的配置文件>命令行标志位>环境变量>远程Key/Value存储>默认值。）
+
+Viper使用[crypt](https://github.com/bketelsen/crypt)从K/V存储中检索配置，这意味着如果你有正确的gpg密匙，你可以将配置值加密存储并自动解密。加密是可选的。
+
+你可以将远程配置与本地配置结合使用，也可以独立使用。
+
+`crypt`有一个命令行助手，你可以使用它将配置放入K/V存储中。`crypt`默认使用在[http://127.0.0.1:4001](http://127.0.0.1:4001/)的etcd。
+
+```bash
+$ go get github.com/bketelsen/crypt/bin/crypt
+$ crypt set -plaintext /config/hugo.json /Users/hugo/settings/config.json
+```
+
+确认值已经设置：
+
+```bash
+$ crypt get -plaintext /config/hugo.json
+```
+
+有关如何设置加密值或如何使用Consul的示例，请参见`crypt`文档。
+
+## 远程Key/Value存储示例-未加密
+
+### etcd
+
+~~~go
+viper.AddRemoteProvider("etcd", "http://127.0.0.1:4001","/config/hugo.json")
+viper.SetConfigType("json") // 因为在字节流中没有文件扩展名，所以这里需要设置下类型。支持的扩展名有 "json", "toml", "yaml", "yml", "properties", "props", "prop", "env", "dotenv"
+err := viper.ReadRemoteConfig()
+~~~
+
+### Consul
+
+你需要 Consul Key/Value存储中设置一个Key保存包含所需配置的JSON值。例如，创建一个key`MY_CONSUL_KEY`将下面的值存入Consul key/value 存储：
+```json
+{
+    "port": 8080,
+    "hostname": "liwenzhou.com"
+}
+```
+
+```go
+viper.AddRemoteProvider("consul", "localhost:8500", "MY_CONSUL_KEY")
+viper.SetConfigType("json") // 需要显示设置成json
+err := viper.ReadRemoteConfig()
+
+fmt.Println(viper.Get("port")) // 8080
+fmt.Println(viper.Get("hostname")) // liwenzhou.com
+```
+### Firestore
+
+```go
+viper.AddRemoteProvider("firestore", "google-cloud-project-id", "collection/document")
+viper.SetConfigType("json") // 配置的格式: "json", "toml", "yaml", "yml"
+err := viper.ReadRemoteConfig()
+```
+当然，你也可以使用`SecureRemoteProvider`。
+## 远程Key/Value存储示例-加密
+
+```go
+viper.AddSecureRemoteProvider("etcd","http://127.0.0.1:4001","/config/hugo.json","/etc/secrets/mykeyring.gpg")
+viper.SetConfigType("json") // 因为在字节流中没有文件扩展名，所以这里需要设置下类型。支持的扩展名有 "json", "toml", "yaml", "yml", "properties", "props", "prop", "env", "dotenv"
+err := viper.ReadRemoteConfig()
+```
+
+## 监控etcd中的更改-未加密
+
+```go
+// 或者你可以创建一个新的viper实例
+var runtime_viper = viper.New()
+
+runtime_viper.AddRemoteProvider("etcd", "http://127.0.0.1:4001", "/config/hugo.yml")
+runtime_viper.SetConfigType("yaml") // 因为在字节流中没有文件扩展名，所以这里需要设置下类型。支持的扩展名有 "json", "toml", "yaml", "yml", "properties", "props", "prop", "env", "dotenv"
+
+// 第一次从远程读取配置
+err := runtime_viper.ReadRemoteConfig()
+
+// 反序列化
+runtime_viper.Unmarshal(&runtime_conf)
+
+// 开启一个单独的goroutine一直监控远端的变更
+go func(){
+	for {
+	    time.Sleep(time.Second * 5) // 每次请求后延迟一下
+
+	    // 目前只测试了etcd支持
+	    err := runtime_viper.WatchRemoteConfig()
+	    if err != nil {
+	        log.Errorf("unable to read remote config: %v", err)
+	        continue
+	    }
+
+	    // 将新配置反序列化到我们运行时的配置结构体中。你还可以借助channel实现一个通知系统更改的信号
+	    runtime_viper.Unmarshal(&runtime_conf)
+	}
+}()
+```
